// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsDialog renders without crashing 1`] = `
<Modal
  isOpen={true}
  onClose={[Function]}
>
  <ModalHeader>
    Settings
  </ModalHeader>
  <ModalBody>
    <StyledHr />
    <StyledHeader>
      Appearance
    </StyledHeader>
    <label>
      <input
        checked={false}
        name="wideMode"
        onChange={[Function]}
        type="checkbox"
      />
       
      Wide mode
    </label>
    <div>
      <StyledSmall>
        Turn on to make this app occupy the entire width of the screen
      </StyledSmall>
    </div>
    <StyledLabel>
      Theme
    </StyledLabel>
    <StyledSmall>
      Choose app and font colors/styles
    </StyledSmall>
    <Selectbox
      disabled={false}
      onChange={[Function]}
      options={
        Array [
          "Light",
          "Dark",
        ]
      }
      value={0}
    />
    <ThemeCreator />
  </ModalBody>
</Modal>
`;

exports[`SettingsDialog should hide theme creator if not developer mode 1`] = `
<Modal
  isOpen={true}
  onClose={[Function]}
>
  <ModalHeader>
    Settings
  </ModalHeader>
  <ModalBody>
    <StyledHr />
    <StyledHeader>
      Appearance
    </StyledHeader>
    <label>
      <input
        checked={false}
        name="wideMode"
        onChange={[Function]}
        type="checkbox"
      />
       
      Wide mode
    </label>
    <div>
      <StyledSmall>
        Turn on to make this app occupy the entire width of the screen
      </StyledSmall>
    </div>
    <StyledLabel>
      Theme
    </StyledLabel>
    <StyledSmall>
      Choose app and font colors/styles
    </StyledSmall>
    <Selectbox
      disabled={false}
      onChange={[Function]}
      options={
        Array [
          "Light",
          "Dark",
        ]
      }
      value={0}
    />
  </ModalBody>
</Modal>
`;
